Update page heading
Page heading updated

--- a/index.html
+++ b/index.html
@@ -53,9 +53,14 @@
             height:600px;
         }
 
+        .centre-alignTxt {
+            text-align: center;
+        }
+
     </style>
 </head>
-<body>            
+<body>
+    <h3 class="centre-alignTxt">Dynamics CRM - Fetch XML to C#/ Javascript string</h3>            
     <div>
         <p>This web application will help to convert raw Fetch XML strings that are downloaded from the Dynamics CRM interface to strings that can be used in your JS/C# code.</p>
         <p><b>How to use:</b> Give the source Fetch XML string inside the "Raw Fetch XML" area and click on the Convert! button to proceed</p>
