--- a/index.html
+++ b/index.html
@@ -38,14 +38,24 @@ If you want to re-use the code to develop your own tool please contact me via em
 
                         // if hyphen at the very start
                         if (valueToAppend[0] == '-') {
+
+                            // replace the first hyphen only
                             valueToAppend = valueToAppend.replace("-", "");
                         }
                         else {
                             // iterate through the split string searching for hyphen at the start
                             for (var charcount = 1; charcount < valueToAppend.length; charcount++) {
-                                if (valueToAppend[charcount - 1] == ' ' && valueToAppend[charcount] == '-') {
-                                    valueToAppend = valueToAppend.replace("-", "");
+                                // characters have started
+                                if (valueToAppend[charcount - 1] != ' ') {
                                     break;
+                                }
+                                else {
+                                    if (valueToAppend[charcount] == '-') {
+
+                                        // replace the fisrt occurance of hyphen only
+                                        valueToAppend = valueToAppend.replace("-", "");
+                                        break;
+                                    }
                                 }
                             }
                         }
@@ -65,6 +75,7 @@ If you want to re-use the code to develop your own tool please contact me via em
         }
     </script>
     <script>
+        // for analytics of usage
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
