--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ If you want to re-use the code to develop your own tool please contact me via em
 <html>
 <head>
     <title></title>
-	<meta charset="utf-8" />
+    <meta charset="utf-8" />
     <script>
         var fetchToString = fetchToString || {};
 
@@ -25,7 +25,7 @@ If you want to re-use the code to develop your own tool please contact me via em
                 // replace double quotes with single quotes
                 strValue = strValue.replace(new RegExp("\"", 'g'), "'");
 
-                // split by newlines and append 
+                // split by newlines and append
                 var splitStrs = strValue.split("\n");
 
                 for (var itr = 0; itr < splitStrs.length - 1; itr++) {
@@ -38,24 +38,14 @@ If you want to re-use the code to develop your own tool please contact me via em
 
                         // if hyphen at the very start
                         if (valueToAppend[0] == '-') {
-
-                            // replace the first hyphen only
                             valueToAppend = valueToAppend.replace("-", "");
                         }
                         else {
                             // iterate through the split string searching for hyphen at the start
                             for (var charcount = 1; charcount < valueToAppend.length; charcount++) {
-                                // characters have started
-                                if (valueToAppend[charcount - 1] != ' ') {
+                                if (valueToAppend[charcount - 1] == ' ' && valueToAppend[charcount] == '-') {
+                                    valueToAppend = valueToAppend.replace("-", "");
                                     break;
-                                }
-                                else {
-                                    if (valueToAppend[charcount] == '-') {
-
-                                        // replace the fisrt occurance of hyphen only
-                                        valueToAppend = valueToAppend.replace("-", "");
-                                        break;
-                                    }
                                 }
                             }
                         }
@@ -73,9 +63,35 @@ If you want to re-use the code to develop your own tool please contact me via em
 
             return retVal;
         }
+
+        /*
+            Replace the selected item with placeholder string
+        */
+        fetchToString.replaceSelectedItem = function () {
+            // get the selected item in the output
+            var outputTextAreaItem = document.getElementById("output");
+            var selectionStart = outputTextAreaItem.selectionStart;
+            var selectionEnd = outputTextAreaItem.selectionEnd;
+            if(selectionEnd >= selectionStart)
+            {
+                var existingOutputText = outputTextAreaItem.value;
+                var selectedText = existingOutputText.substring(selectionStart, selectionEnd);
+                if(selectedText)
+                {
+                    outputTextAreaItem.value = existingOutputText.replace(selectedText, "\" + PLACE_HOLDER + \"");
+                    document.getElementById("replaceBtn").disabled = true;
+                }
+            }
+        }
+
+        /*
+            Enable the replace button
+        */
+        fetchToString.enableReplaceButton = function () {
+            document.getElementById("replaceBtn").disabled = false;
+        }
     </script>
     <script>
-        // for analytics of usage
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -87,40 +103,41 @@ If you want to re-use the code to develop your own tool please contact me via em
     </script>
     <style>
         .inline-div {
-            display:inline-block;
+            display: inline-block;
         }
 
         .inline-txtarea {
             resize: none;
-            border : 2px solid red;
-            height:600px;
+            border: 2px solid red;
+            height: 600px;
         }
 
         .centre-alignTxt {
             text-align: center;
         }
-
     </style>
 </head>
 <body>
-    <h3 class="centre-alignTxt">Dynamics CRM - Fetch XML to C#/ Javascript string</h3>            
+    <h3 class="centre-alignTxt">Dynamics CRM - Fetch XML to C#/ Javascript string</h3>
     <div>
         <p>This web application will help to convert raw Fetch XML strings that are downloaded from the Dynamics CRM interface to strings that can be used in your JS/C# code.</p>
         <p><b>How to use:</b> Give the source Fetch XML string inside the "Raw Fetch XML" area and click on the Convert! button to proceed</p>
+        <p><i>*Update*</i>: Select the item you want to replace with a placeholder by selecting the text in the output area and clicking on Replace button! </p>
     </div>
-        <div class="inline-div">
-            <p><b>Raw Fetch XML</b></p>
-            <textarea id="input" cols="80" rows="15" class="inline-txtarea"></textarea>
-        </div>        
-        <div class="inline-div">
-            <p><b>Processed Fetch XML</b></p>
-            <textarea id="output" cols="80" rows="15" class="inline-txtarea"></textarea>
-        </div>    
+    <div class="inline-div">
+        <p><b>Raw Fetch XML</b></p>
+        <textarea id="input" cols="80" rows="15" class="inline-txtarea"></textarea>
+    </div>
+    <div class="inline-div">
+        <p><b>Processed Fetch XML</b></p>
+        <textarea id="output" cols="80" rows="15" class="inline-txtarea" onselect="fetchToString.enableReplaceButton()"></textarea>
+    </div>
     <div>
         <button value="Convert!" onclick="fetchToString.processFetchInput()">Convert!</button>
+        <button id="replaceBtn" value="Replace!" onclick="fetchToString.replaceSelectedItem()" disabled="disabled" title="Select the item to replace with a placeholder">Replace!</button>
     </div>
     <div>
-        <p>Developed by Anurag Chatterjee. Contact <a href="mailto:anuragchatterjee92@gmail.com">here</a></p>        
+        <p>Developed by Anurag Chatterjee. Contact <a href="mailto:anuragchatterjee92@gmail.com">here</a></p>
     </div>
 </body>
 </html>
